Add User schema. Add user list. Add authentication based on MongoDB. Fix RedisStore for session engine in expressjs.

--- a/views/login.jade
+++ b/views/login.jade
@@ -6,7 +6,7 @@ block content
     | Try accessing 
     a(href="/restricted") /restricted
 
-  #form
+  #login-form
     form(method="post")
       !=authentication_form.toHTML()
       input(type="submit")
